Added RabbitMQ Configuration as Consumer, add Docker Compose and dockerfile, fix Flyway issue